@@ -28,6 +28,7 @@ import de.tum.in.www1.artemis.service.exam.ExamService;
 import de.tum.in.www1.artemis.service.notifications.SingleUserNotificationService;
 import de.tum.in.www1.artemis.web.rest.dto.TextAssessmentDTO;
 import de.tum.in.www1.artemis.web.rest.dto.TextAssessmentUpdateDTO;
+import de.tum.in.www1.artemis.web.rest.errors.AccessForbiddenException;
 import de.tum.in.www1.artemis.web.rest.errors.BadRequestAlertException;
 import de.tum.in.www1.artemis.web.rest.errors.ErrorConstants;
 import de.tum.in.www1.artemis.web.rest.util.HeaderUtil;
@@ -220,13 +221,12 @@ public class TextAssessmentResource extends AssessmentResource {
                     "feedbackReferenceTooLong");
         }
         Result result = resultRepository.findByIdElseThrow(resultId);
-        if (!(result.getParticipation().getExercise() instanceof TextExercise)) {
+        if (!(result.getParticipation().getExercise() instanceof final TextExercise exercise)) {
             return badRequest("Exercise", "400", "This exercise isn't a TextExercise!");
         }
         else if (!result.getParticipation().getId().equals(participationId)) {
             return badRequest("participationId", "400", "participationId in Result of resultId " + resultId + "doesn't match the paths participationId!");
         }
-        final TextExercise exercise = (TextExercise) result.getParticipation().getExercise();
         checkAuthorization(exercise, null);
         final TextSubmission textSubmission = textSubmissionRepository.getTextSubmissionWithResultAndTextBlocksAndFeedbackByResultIdElseThrow(resultId);
         ResponseEntity<Result> response = super.saveAssessment(textSubmission, true, textAssessment.getFeedbacks(), resultId);
@@ -361,7 +361,9 @@ public class TextAssessmentResource extends AssessmentResource {
             if (result != null && !isAtLeastInstructorForExercise && result.getAssessor() != null && !result.getAssessor().getLogin().equals(user.getLogin())
                     && result.getCompletionDate() == null) {
                 // If we already have a result, we need to check if it is locked.
-                return locked(ENTITY_NAME, "alreadyAssessed", "This submission is being assessed by another tutor");
+                return ResponseEntity.status(HttpStatus.LOCKED)
+                        .headers(HeaderUtil.createFailureAlert(applicationName, true, ENTITY_NAME, "alreadyAssessed", "This submission is being assessed by another tutor"))
+                        .build();
             }
 
             textSubmissionService.lockTextSubmissionToBeAssessed(textSubmission, correctionRound);
@@ -478,7 +480,7 @@ public class TextAssessmentResource extends AssessmentResource {
         }
         final boolean isInstructorForExercise = authCheckService.isAtLeastInstructorForExercise(textExercise, user);
         if (result != null && result.getAssessor() != null && !result.getAssessor().getLogin().equals(user.getLogin()) && !isInstructorForExercise) {
-            return forbidden();
+            throw new AccessForbiddenException();
         }
 
         Set<TextSubmission> textSubmissionSet = this.automaticTextAssessmentConflictService.get().getConflictingSubmissions(feedbackId);
@@ -517,13 +519,11 @@ public class TextAssessmentResource extends AssessmentResource {
 
         final boolean isInstructorForExercise = authCheckService.isAtLeastInstructorForExercise(textExercise, user);
         if (!firstAssessor.getLogin().equals(user.getLogin()) && !secondAssessor.getLogin().equals(user.getLogin()) && !isInstructorForExercise) {
-            return forbidden();
+            throw new AccessForbiddenException();
         }
 
         this.automaticTextAssessmentConflictService.get().solveFeedbackConflict(feedbackConflict);
-
         return ResponseEntity.ok(feedbackConflict);
-
     }
 
     @Override
@@ -552,7 +552,7 @@ public class TextAssessmentResource extends AssessmentResource {
      */
     private void saveTextBlocks(final Set<TextBlock> textBlocks, final TextSubmission textSubmission, final TextExercise exercise, final List<Feedback> feedbacks) {
         if (textBlocks != null) {
-            List<Feedback> nonGeneralFeedbacks = feedbacks.stream().filter(feedback -> feedback.getReference() != null).collect(Collectors.toList());
+            List<Feedback> nonGeneralFeedbacks = feedbacks.stream().filter(feedback -> feedback.getReference() != null).toList();
             Map<String, Feedback> feedbackMap = nonGeneralFeedbacks.stream().collect(Collectors.toMap(Feedback::getReference, Function.identity()));
             final Set<String> existingTextBlockIds = textSubmission.getBlocks().stream().map(TextBlock::getId).collect(toSet());
             final var updatedTextBlocks = textBlocks.stream().filter(tb -> !existingTextBlockIds.contains(tb.getId())).peek(tb -> {
